<resources>
    <string name="app_name">DriverSafeBC</string>
    <string name="team_name">Team Name: DriverSafeBC (DSBC)</string>
    <string name="at_your_service">At Your Service</string>
    <string name="firebase">Firebase</string>
    <string name="driversafebc">DriverSafeBC</string>
    <string name="difficulty_label_string">Difficulty</string>
    <string name="type_label_string">Type</string>
    <string name="any_difficulty_string">Any</string>
    <string name="easy_difficulty_string">Easy</string>
    <string name="medium_difficulty_string">Medium</string>
    <string name="hard_difficulty_string">Hard</string>
    <string name="any_type_string">Any</string>
    <string name="true_false_type_string">True / False</string>
    <string name="multiple_choice_type_string">Multiple Choice</string>
    <string name="number_of_trivia_type_string">Number of trivia</string>
    <string name="minus_sign_string">-</string>
    <string name="plus_sign_string">+</string>
    <string name="get_trivia_string">Get Trivia</string>
    <string name="get_trivia_failure_message_string">Failed to get trivia. Please check your internet connection and try again later</string>
    <string name="back_to_top_button_description_string">Back to Top</string>
    <string name="about">ABOUT</string>
    <string name="notification_channel_id">inbox</string>
    <string name="sent_indicator_text">Sent: </string>
    <string name="from_string">From:</string>
    <string name="time_string">Time:</string>
    <string name="sticker_image_string">sticker image</string>
    <string name="currently_empty_string">Currently empty</string>
    <string name="inbox_string">Inbox:</string>
    <string name="select_receiver_string">Select receiver</string>
    <string name="send_string">Send</string>
    <string name="login_string">Login</string>
    <string name="current_user_string">Current user:</string>
    <string name="choose_sticker_string">Choose sticker:</string>
    <string name="send_to_string">Send to:</string>
    <string name="username_string">Username:</string>
    <string name="group_name_driversafebc">Group Name: DriverSafeBC</string>
    <string name="group_members">Group Members:</string>
    <string name="yuzhe_shen">Yuzhe Shen</string>
    <string name="jianhao_zhou">Jianhao Zhou</string>
    <string name="mingfu_huang">Mingfu Huang</string>
    <string name="shang_xiao">Shang Xiao</string>
    <string name="password">Password</string>
    <string name="an_account_will_be_automatically_created_for_you_if_the_username_does_not_exist">An account will be automatically created for you if the username does not exist</string>
    <string name="exclamation_mark">!</string>
    <string name="user">User</string>
    <string name="welcome">Welcome,</string>
    <string name="your_overall_progress">Your Overall Progress:</string>
    <string name="your_rank">Your Rank:</string>
    <string name="start_practicing">Start Practicing</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="your_score">Your Score:</string>
    <string name="continue_string">Continue</string>
    <string name="review">Review</string>
    <string name="select_quiz_set">Select Quiz Set</string>
    <string name="best">Best</string>
</resources>