<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardScroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DashboardActivity">

    <LinearLayout
        android:id="@+id/linearLayoutDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dashboardLoginContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewLoginLabelDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="24dp"
                android:labelFor="@id/editTextUsernameDashboard"
                android:text="@string/username_string"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/editTextUsernameDashboard"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextUsernameDashboard"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLoginLabelDashboard"
                tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textViewPasswordLabelDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:labelFor="@id/editTextPasswordDashboard"
                android:text="@string/password"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/editTextPasswordDashboard"
                app:layout_constraintTop_toBottomOf="@+id/editTextUsernameDashboard" />

            <EditText
                android:id="@+id/editTextPasswordDashboard"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewPasswordLabelDashboard"
                tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/textViewAccountCreationLabelDashboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:labelFor="@id/editTextUsername"
                android:text="@string/an_account_will_be_automatically_created_for_you_if_the_username_does_not_exist"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/editTextPasswordDashboard"
                app:layout_constraintStart_toStartOf="@+id/editTextPasswordDashboard"
                app:layout_constraintTop_toBottomOf="@+id/editTextPasswordDashboard" />

            <Button
                android:id="@+id/buttonLoginDashboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:enabled="false"
                android:onClick="loginButtonClicked"
                android:text="@string/login_string"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textViewAccountCreationLabelDashboard"
                app:layout_constraintStart_toStartOf="@+id/textViewAccountCreationLabelDashboard"
                app:layout_constraintTop_toBottomOf="@+id/textViewAccountCreationLabelDashboard" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dashboardMainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startButtonClicked"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/textViewWelcomeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/welcome"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewWelcomeLabelUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textViewWelcomeLabel"
                app:layout_constraintTop_toTopOf="@+id/textViewWelcomeLabel" />

            <TextView
                android:id="@+id/textViewWelcomeLabelExclamation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exclamation_mark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/textViewWelcomeLabelUsername"
                app:layout_constraintTop_toTopOf="@+id/textViewWelcomeLabel" />

            <TextView
                android:id="@+id/textViewYourOverallProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/your_overall_progress"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeLabel" />

            <ProgressBar
                android:id="@+id/progressBarOverallProgress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:progress="60"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewYourOverallProgress" />

            <TextView
                android:id="@+id/textViewProgressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                tools:text="10/20 questions passed"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBarOverallProgress" />

            <TextView
                android:id="@+id/textViewYourRank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/your_rank"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewProgressText" />

            <ProgressBar
                android:id="@+id/progressBarRank"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:progress="60"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewYourRank" />

            <TextView
                android:id="@+id/textViewRankText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                tools:text="You are ranked 123 out of 1000 users"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/progressBarRank" />

            <Button
                android:id="@+id/buttonStartPracticing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:onClick="startButtonClicked"
                android:text="@string/start_practicing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewRankText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
